--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@ body {
 
 div {
 	border: 1px solid black;
-
+	margin: -8px -8px;
 }
 
-a {
+.Menu a {
 	color: white;
 	text-decoration: none;
 }
@@ -16,7 +16,7 @@ a {
 .Menu ul li {
 	list-style: none;
 	display: inline;
-	padding: 17px 75px;
+	padding: 15px 75px 21px 75px;
 
 }
 
@@ -32,19 +32,30 @@ a {
 }
 
 .Sidebar {
-	width: 500px;
+	width: 290px;
 	height: 550px;
 	float: right;
+	margin: 44px 0px;
+}
+
+.ListaMeta {
+	font-size: 20px;
+}
+
+.FonteMeta {
+	font-size: 10px;
 }
 
 .Content {
 	width: 770px;
 	height: 550px;
 	float: left;
+	margin: 44px -8px;
 }
 
 .Content .Artigo {
 	width: 766px;
 	height: 190px;
 	float: left;
+	margin: 0px 0px;
 }
