--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 body {
 	font-family: Arial, Tahona, sans;
-    font-size: 14px
+    font-size: 62.5%;
 }
 
 div {
-	border: 1px solid white; /*Mundei para branco para ajeitar a div*/
-	margin: -8px -8px;
+	border: 1px solid black; /*Mundei para branco para ajeitar a div*/
 }
 
 .Menu a {
@@ -16,8 +15,8 @@ div {
 .Menu ul li {
 	list-style: none;
 	display: inline;
-	padding: 15px 75px 21px 75px;
-
+	padding: 1% 5% 1.6% 5%;
+	font-size: 2em;
 }
 
 .Menu li:hover {
@@ -27,57 +26,73 @@ div {
 .Menu {
 	width: 100%;
 	height: 50px;
+	margin: -8px -8px;
 	background: black;
 	position: fixed;
 }
 
 .Sidebar {
-	width: 290px;
-	height: 550px;
+	width: 20%;
+	height: 100%;
 	float: right;
-	margin: 44px 0px;
+	margin: 44px 0;
 }
 
 .ListaMeta {
-	font-size: 20px;
-}
-
-.FonteMeta {
-	font-size: 10px;
+	font-size: 2em;
 }
 
 .Content {
-	width: 819px;
+	width: 950px;
 	height: 550px;
 	float: left;
 	margin: 44px -8px;
 }
 
-.Content .Artigo {
-	width: 790px;
+.Content .Article {
+	width: 900px;
 	height: 190px;
 	float: left;
 	margin: 16px 16px;
-
+	line-height: 25px;
 }
 
 /*Cinthia vai mexer aqui*/
-
-.AreaConteudo	{
-     line-height: 25px;
-     border-radius:5px;
-     overflow: hidden;
-     margin: 10px 0px;
-     
+.conteudo {
+	width: 100%;
+	height: 100%;
+	float: left;
+	margin: 2px 2px;
+	background-color: gray;
+	border-radius:5px;
+	overflow: hidden;
 }
 
-.conteudo    {
-    width: 102%;
-    height: 130%;
-    float: left;
-    margin: 2px 2px;
-    background-color: gray;
-    
+.Post p {
+	margin: 0px 21px;
+}
+
+.Post header {
+	text-align: center;
+}
+
+.Post footer {
+	text-align: center;
+	font-size: 10px;
+}
+
+.Post {
+	font-size: 1.4em;
+}
+
+.Post .ReadMore {
+	margin: 0px 47%;
+}
+
+.Post .ReadMore button {
+	background-color: #0066FF;
+	color: white;
+	font-size: 10px;
 }
 /*EU ajeito isso depois*/
 
