--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+
+/*Link de cores em hexadecimal:http://erikasarti.net/html/tabela-cores/*/
 body {
 	font-family: Arial, Tahona, sans;
     font-size: 14px
 }
 
 div {
-	border: 1px solid white; /*Mundei para branco para ajeitar a div*/
+/*	border: 1px solid black; Mundei para branco para ajeitar a div*/
 	margin: -8px -8px;
 }
 
@@ -62,13 +64,27 @@ div {
 }
 
 /*Cinthia vai mexer aqui*/
+/*Tudo isso aqui é a div de conteudo para noticiA*/
 
 .AreaConteudo	{
-     line-height: 25px;
+     line-height: 17px;
      border-radius:5px;
      overflow: hidden;
      margin: 10px 0px;
-     
+     padding: 3%;
+     background-color: #C0C0C0;
+     text-align: justify;
+}
+
+.AreaConteudo h2{
+    text-align: center;
+    font-size: 20px;
+}
+
+.AreaConteudo h1{
+    font-size: 14px;
+    margin: 10px 300px;
+
 }
 
 .conteudo    {
@@ -76,8 +92,38 @@ div {
     height: 130%;
     float: left;
     margin: 2px 2px;
-    background-color: gray;
+    background-color: #C0C0C0; 
+}
+
+.LerMais:hover {
+	background-color: #B0C4DE;
+}
+
+.LerMais   {
+    width: 130px;
+    height: 35px;
+    margin: -4px 386px;
+    background-color:#C0C0C0;
     
+}
+.LerMais p{
+text-align: center;
+margin: 2px 0px;
+}
+
+
+
+.img	{   
+    width: 200px;
+    height: 200px;
+    margin: 20px 0px;
+}
+
+.PrimeiroPost{
+	float: left;
+	  width: 520px;
+	 height: 220px;
+  	    margin: -225px 220px;
 }
 /*EU ajeito isso depois*/
 
