--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
 	font-family: Arial, Tahona, sans;
     font-size: 62.5%;
+    background-color: #CCCCCC;
 }
 
 img {
@@ -8,6 +9,7 @@ img {
 	float: left;
 }
 
+/* Menu */
 .Menu a {
 	color: white;
 	text-decoration: none;
@@ -32,33 +34,48 @@ img {
 	position: fixed;
 }
 
+/* Barra Lateral */
 .Sidebar {
 	width: 20%;
-	height: 100%;
+	height: 1500px;
 	float: right;
 	margin: 44px 0;
 }
 
-.ListaMeta {
-	font-size: 2em;
+.ListaMeta h3 {
+	font-size: 10px;
+	line-height: 0px;
+	margin: -4.5% 7%;
 }
 
+.ListaMeta li {
+	margin: 0% 2%;
+}
+
+.ListaMeta {
+	width: 100%;
+	height: 30%;
+	font-size: 2em;
+	background-color: white;
+}
+
+/* Div de Conteúdo */
 .Content {
-	width: 950px;
-	height: 550px;
+	width: 79%;
+	height: 1000px;
 	float: left;
 	margin: 44px -8px;
 }
 
+/* Configurações relacionadas aos posts */
 .Content .Article {
-	width: 900px;
-	height: 190px;
+	width: 95%;
+	height: 18.5em;
 	float: left;
 	margin: 16px 16px;
-	line-height: 25px;
+	line-height: 2.5em;
 }
 
-/*Cinthia vai mexer aqui*/
 .conteudo {
 	width: 100%;
 	height: 100%;
@@ -67,6 +84,7 @@ img {
 	background-color: gray;
 	border-radius:5px;
 	overflow: hidden;
+	background-color: white;
 }
 
 .Post p {
@@ -92,16 +110,23 @@ img {
 	font-size: 1.4em;
 }
 
+.Post .postPic {
+	width: 300px;
+	height: 300px;
+	margin: 2%;
+	border: 2px black solid;
+}
+
 .Post .ReadMore {
 	margin: 0px 47%;
 }
 
-.Post .ReadMore button {
+.ReadMore button {
 	background-color: #0066FF;
 	color: white;
 	font-size: 10px;
+	float: right;
 }
-/*EU ajeito isso depois*/
 
 
 /* Classes de banlist.html */
