--- a/css/event-style.css
+++ b/css/event-style.css
@@ -4,16 +4,19 @@ body {
     background-color: #CCCCCC;
 }
 
+/*div{
+border: 1px solid black;
+}
+
 img {
 	max-width: 100%;
 	float: left;
-}
+}*/
 
 /* Menu */
 .Menu a {
 	color: white;
 	text-decoration: none;
-
 }
 
 .Menu ul li {
@@ -33,23 +36,20 @@ img {
 	margin: -8px -8px;
 	background: black;
 	position: fixed;
-	box-shadow: 3px 3px 5px #888888;
 }
 
 /* Barra Lateral */
 .Sidebar {
 	width: 20%;
-	height: 1500px;
+	min-height: 500px;
 	float: right;
-	margin: 44px 0;
-	
+	margin: 36px 0;
 }
 
 .ListaMeta h3 {
 	font-size: 10px;
 	line-height: 0px;
 	margin: -4.5% 7%;
-	
 }
 
 .ListaMeta li {
@@ -58,17 +58,14 @@ img {
 
 .ListaMeta {
 	width: 100%;
-	height: 30%;
+	height: 18em;
 	font-size: 2em;
 	background-color: white;
-	box-shadow: 3px 3px 5px #888888;
-	border-radius: 10px;
 }
 
-/* Div de Conteúdo */
 .Content {
-	width: 79%;
-	height: 1000px;
+	width: 76%;
+	min-height: 500px;
 	float: left;
 	margin: 44px -8px;
 }
@@ -134,43 +131,105 @@ img {
 	float: right;
 }
 
-/*Conteudo da Materia*/
-
-.mainimg   {
-	width:740px;
-	height:200px;
-	margin: 16px 60px;
-
+.Footer {
+	width: 101.3%;
+	height: 25%;
+	margin: -8px;
+	background-color: gray;
+	float: left;
 }
 
-.matter {
-	width:100%;
-	height:510%;
-	margin: 16px 0px;
+
+/*Parte relacionada a Pagina de Eventos*/
+
+
+.status{
+	width: 50%;
+	height: 4em;
+	margin: 2em 32em;
+	background-color: gray;
 	box-shadow: 3px 3px 5px #888888;
+	border-radius: 12px;
+
+}
+
+.status h1   {
+	font-style: Arial;
+	text-align:center;
+	font-size:20px;
+	color: white;
+	margin: 0px 0px;	
+
+
 
 }
 
 
-.matter h1  {
+.event {
+	width: 95%;
+	height: 15em;
+	margin: 5em 5em;
+	background-color: #A9A9A9;
+	box-shadow: 3px 3px 5px #888888;
+	border-radius: 12px;
+}
+
+.event h1  {
+	color: white;
+	text-align:center;
+	font-size:18px;
+
+}
+
+.date   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
+}
+
+
+.date p  {
 	text-align: center;
-   	font-style: Arial;
-	font-size: 30px;
-}
-
-.matter p   {
-	line-height: 20px;
-	text-align: justify;
-	padding: 2%;
 	font-size: 15px;
-	
 }
 
-/* Edição do texto da parte do conteudo*/
+.name p  {
+	text-align: center;
+	font-size: 15px;
+}
+
+.location p  {
+	text-align: center;
+	font-size: 15px;
+}
+
+.information p  {
+	text-align: center;
+	font-size: 15px;
+}
 
 
 
+.name   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
+}
 
+.location   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
+}
+
+.information   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
 
 
 
