--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,73 @@ img {
 	float: left;
 }
 
+/* Classes de estrategias.html */
+.deckSelect {
+	width: 63%;
+	height: 70%;
+	margin: 8% 20%;
+}
+
+.deck img {
+	max-width: 93%;
+	max-height: 93%;
+	margin: 0 3%;
+}
+
+.deck a {
+	color: blue;
+	text-decoration: none;
+}
+
+.deck {
+	width: 200px;
+	height: 200px;
+	text-align: center;
+	font-size: 1.4em;
+	float: left;
+}
+
+/* Classes de <estrategia>.html */
+.Strategy_Matter header {
+	font-size: 2.5em;
+}
+
+.Strategy_Matter img {
+	height: 72.5%;
+}
+
+.Strategy_Matter {
+	width: 95%;
+	height: 100em;
+	margin: 3%;
+	border: 1px solid black;
+}
+
+.ArchetypeText {
+	width: 65%;
+	height: 95%;
+	border: 1px solid black;
+	margin: 1%;
+	float: left;
+	font-size: 1.4em;
+}
+
+.ArchetypeInfo {
+	width: 30%;
+	height: 40em;
+	margin: 1%;
+	border: 1px solid black;
+	float: right;
+}
+
+.ArchetypeLang {
+	font-size: 1.4em;
+	width: 50%;
+	height: 1em;
+	padding: 4% 0;
+	float: left;
+	border-bottom: 1px solid black;
+}
 
 /* Classes de banlist.html */
 .ArticleBanlist {
