--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ img {
 .Menu ul li {
 	list-style: none;
 	display: inline;
-	padding: 1% 5% 1.4% 5%;
+	padding: 1% 9% 1.4% 9%;
 	font-size: 2em;
 }
 
@@ -40,6 +40,7 @@ img {
 	min-height: 500px;
 	float: right;
 	margin: 36px 0;
+	border-radius: 5px;
 }
 
 .ListaMeta h3 {
@@ -57,6 +58,7 @@ img {
 	height: 18em;
 	font-size: 2em;
 	background-color: white;
+	border-radius: 5px;
 }
 
 .Content {
@@ -202,6 +204,89 @@ img {
 	float: left;
 	border-bottom: 1px solid black;
 }
+
+/* Classes de eventos.html */
+.status{
+	width: 50%;
+	height: 4em;
+	margin: 2em 32em;
+	background-color: gray;
+	box-shadow: 3px 3px 5px #888888;
+	border-radius: 12px;
+}
+
+.status h1   {
+	font-style: Arial;
+	text-align:center;
+	font-size:20px;
+	color: white;
+	margin: 0px 0px;
+}
+
+.event {
+	width: 95%;
+	height: 15em;
+	margin: 5em 5em;
+	background-color: #A9A9A9;
+	box-shadow: 3px 3px 5px #888888;
+	border-radius: 12px;
+}
+
+.event h1  {
+	color: white;
+	text-align:center;
+	font-size:18px;
+
+}
+
+.date   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
+}
+
+.date p  {
+	text-align: center;
+	font-size: 15px;
+}
+
+.name p  {
+	text-align: center;
+	font-size: 15px;
+}
+
+.location p  {
+	text-align: center;
+	font-size: 15px;
+}
+
+.information p  {
+	text-align: center;
+	font-size: 15px;
+}
+
+.name   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
+}
+
+.location   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
+}
+
+.information   {
+	width: 22%;
+	height: 86%;
+	float:left;
+	margin: 10px;
+}
+
 
 /* Classes de banlist.html */
 .ArticleBanlist {
